--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./index.js",
-    "test": "jest **/*.test.js"
+    "precommit": "yarn test && yarn lint",
+    "test": "jest **/*.test.js",
+    "lint": "eslint *.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +24,8 @@
   "devDependencies": {
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "husky": "^0.14.3",
     "jest": "^23.6.0",
     "nodemon": "^1.18.4"
   }
