--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
     "extends": "airbnb-base",
     "rules": {
       "semi": [2, "never"]
-    }
+    },
+    "plugins": ["jest"],
+    "env": {
+      "jest/globals": true
+    }  
 }
