--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon ./index.js",
     "precommit": "yarn test && yarn lint",
     "test": "jest **/*.test.js",
-    "lint": "eslint *.js"
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
+    "eslint-plugin-jest": "^21.22.0",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
     "rss-parser": "^3.4.3"
