--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jest": "^21.22.0",
     "express": "^4.16.3",
     "moment-timezone": "^0.5.21",
+    "national-rail-darwin": "^1.0.6",
     "rss-parser": "^3.4.3"
   },
   "devDependencies": {
