--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.0.0",
     "eslint-plugin-jest": "^21.22.0",
     "express": "^4.16.3",
+    "html-entities": "^1.2.1",
     "moment-timezone": "^0.5.21",
     "national-rail-darwin": "^1.0.6",
     "rss-parser": "^3.4.3"
