--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "dotenv": "^6.0.0",
     "eslint-plugin-jest": "^21.22.0",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0",
     "moment-timezone": "^0.5.21",
+    "mysql2": "^1.6.4",
     "national-rail-darwin": "^1.0.6",
-    "rss-parser": "^3.4.3"
+    "rss-parser": "^3.4.3",
+    "sequelize": "^4.41.2",
+    "sharp": "^0.21.0",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
