--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jest": "^21.22.0",
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0",
+    "memory-cache": "^0.2.0",
     "moment-timezone": "^0.5.21",
     "mysql2": "^1.6.4",
     "national-rail-darwin": "^1.0.6",
