--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0",
     "html-entities": "^1.2.1",
+    "memory-cache": "^0.2.0",
     "moment-timezone": "^0.5.21",
     "mysql2": "^1.6.4",
     "national-rail-darwin": "^1.0.6",
