--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": "airbnb-base",
     "rules": {
-      "semi": [2, "never"]
+      "semi": [2, "never"],
+      "no-underscore-dangle": ["error", { "allow": ["_id"] }]
     },
     "plugins": ["jest"],
     "env": {
