--- a/package.json
+++ b/package.json
@@ -24,19 +24,16 @@
     "memory-cache": "^0.2.0",
     "moment-timezone": "^0.5.21",
     "mongoose": "^5.4.17",
-    "mysql2": "^1.6.4",
     "national-rail-darwin": "^1.0.6",
     "rss-parser": "^3.4.3",
-    "sequelize": "^4.41.2",
-    "sharp": "^0.21.0",
-    "sqlite3": "^4.0.4"
+    "sharp": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "husky": "^0.14.3",
-    "jest": "^23.6.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.18.9"
   }
 }
