--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./index.js",
     "precommit": "yarn test && yarn lint",
-    "test": "jest **/*.test.js",
+    "test": "nyc mocha tests/ --timeout=3000",
     "lint": "eslint ."
   },
   "author": "",
@@ -29,11 +29,15 @@
     "sharp": "^0.22.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "husky": "^0.14.3",
     "mocha": "^6.1.4",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "nyc": "^14.1.0",
+    "sinon": "^7.3.2"
   }
 }
