Mocha tests don't use arrow functions

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,21 @@
 {
     "extends": "airbnb-base",
-    "rules": {
-      "semi": [2, "never"],
-      "no-underscore-dangle": ["error", { "allow": ["_id"] }]
-    },
     "plugins": ["mocha"],
     "env": {
       "mocha": true
+    },
+    "rules": {
+      "semi": [2, "never"],
+      "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+      "mocha/no-mocha-arrows": 1
     },
     "overrides": [
       {
           "files": "*.spec.js",
           "rules": {
-              "no-unused-expressions": "off"
+              "no-unused-expressions": "off",
+              "prefer-arrow-callback": "off",
+              "func-names": "off"
           }
       }
   ]
