--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
@@ -21,6 +22,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^1.0.0",
     "html-entities": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "memory-cache": "^0.2.0",
     "moment-timezone": "^0.5.21",
     "mongoose": "^5.4.17",
